# Shannon

./: .gitignore  Brewfile  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ENTROPY_AUDIT_2026-07-23.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  setup.sh
.cache/clangd/index/: collapse_detector.cpp.BCED02D77E29464A.idx  collapse_detector.hpp.056FDA87D1092782.idx  config.hpp.ADC5B09B9A3A3A75.idx  entropy.hpp.757C86F5C18AC462.idx  entropy_neon.cpp.6F9920B62FCEA5E5.idx  entropy_omp.cpp.49190175F7948BFD.idx  entropy_scalar.cpp.24772D4815FEC62B.idx  entropy_simd.cpp.C2669C83A20CB7ED.idx  handrail.cpp.B9FE12B3AA110B9F.idx  handrail.hpp.6C9579F2A7D7AF76.idx  hardware_detect.cpp.FFFA9F8A413CCD99.idx  hardware_detect.hpp.D619AABBFEF2423A.idx  main.cpp.43332FEE1666573A.idx  mutual_info.cpp.222A817FFEFBAA13.idx  mutual_info.hpp.B42E39AB4268B043.idx  shannon.cpp.D0DFA1589F6E9E30.idx  shannon.hpp.227F82D6521E7938.idx  stream_ingest.cpp.3DA2FB511FD426D4.idx  stream_ingest.hpp.CB00BFD0974799D3.idx  terminal_agent.cpp.CEB328E8A5E9AD29.idx  terminal_agent.hpp.62942BCC1A58E432.idx  test_shannon.cpp.195E1BBDA1CAB7C0.idx  test_shannon_v2.cpp.38AD3883CC3DDE57.idx  turbo_quant.cpp.DD61474E2C2B99D0.idx  turbo_quant.hpp.45C290DA4D66F4BA.idx  types.hpp.4EE2827106D726E6.idx  unified_dispatch.cpp.1289DBFDE60329C9.idx  unified_dispatch.hpp.91F80C4F7FF0B9C4.idx
.claude/: settings.json
.claude/skills/push/: SKILL.md
.github/workflows/: ci.yml  homebrew.yml  pypi-release.yml  release.yml
Casks/: shannon-pill.rb
Formula/: shannon.rb
Pill/: BLOCKED.md  Package.swift  README.md  project.yml
Pill/Resources/: Info.plist
Pill/Scripts/: make_app.sh
Pill/Sources/PillCore/: AgentActivity.swift  AgentIngest.swift  AgentStyle.swift  Announcer.swift  AudioRoute.swift  Battery.swift  BrowserPageProbe.swift  ConfirmationController.swift  Dictation.swift  GateApprovalClient.swift  GateDBReader.swift  HeadGesture.swift  HeadphoneMotionProvider.swift  HotkeyMonitor.swift  IdleTelemetry.swift  MediaRemoteProvider.swift  NowPlaying.swift  PetPillView.swift  ProcessGuard.swift  ShannonBridge.swift  VoiceCommand.swift  VoiceSession.swift
Pill/Sources/ShannonPill/: AgentActivity+Theme.swift  CloudPublishing.swift  MenuBarController.swift  MenuBarPopoverView.swift  NotchGeometry.swift  PillView.swift  PillWindowController.swift  ShannonPillApp.swift
Pill/Tests/PillCoreTests/: AgentActivityTests.swift  AgentIngestTests.swift  AudioRouteTests.swift  BatteryTests.swift  ConfirmationControllerTests.swift  GateApprovalClientTests.swift  HeadGestureTests.swift  IdleTelemetryTests.swift  NowPlayingTests.swift  ShannonBridgeTests.swift  VoiceCommandTests.swift  VoiceSessionTests.swift
agent_hub/: README.md
agent_hub/docs/: AGENT_HUB.md
agent_hub/python/: agent_protocol.py  credentials.py  pet_manager.py  shannon_gate.py
agent_hub/python/tests/: test_agent_protocol.py  test_credentials.py  test_dataset_runner_bridge.py  test_pet_manager.py  test_shannon_gate.py  test_system_monitor.py
agent_hub/python/tools/: dataset_runner_bridge.py
apps/shannon-agent/: main.cpp
benchmarks/: bench_matrix.py  bench_sensitivity.py
docker/: Dockerfile.cpu  Dockerfile.cuda
docs/: AUDIT_code_quality_96h.md  AUDIT_science_reproducibility_96h.md  MULTI_DEVICE.md  api.md  architecture.md  theory.md  validation.md
examples/: anthropic_demo.py  anthropic_streaming.py  benchmark.py  openai_demo.py  openai_streaming.py  vllm_demo.py  vllm_local.py
fastlane/: Appfile  Fastfile  Gymfile  Matchfile
hub/: ARCHITECTURE.md  AgentHubApp.swift  agent_identity.py  agent_protocol.py  behavioral_entropy.py  credentials.py  requirements.txt  shannon_gate.py  system_monitor.py
hub/Pet/: PetAnimationState.swift  PetAnimator.swift  PetKind.swift  PetPreviewProvider.swift  PetRenderer.swift
hub/tests/: conftest.py  test_agent_identity.py  test_agent_protocol.py  test_behavioral_entropy.py  test_credentials.py  test_dataset_runner_bridge.py  test_gate_status_ask.py  test_hub_ui_actions.py  test_hub_ui_ask_resolve.py  test_pet_manager.py  test_shannon_gate.py  test_system_monitor.py
iOS/: project.yml
iOS/Resources/: PrivacyInfo.xcprivacy
iOS/Sources/ShannonPhone/: Haptics.swift  (+10 more)
iPad/: README.md  project.yml
python/shannon/: __init__.py  _numba_fallback.py  cli.py  detector.py  pill_bridge.py
python/shannon_contact/: __init__.py  atom_typer.py  entropy_bridge.py  matrix.py  pose_encoder.py
python/shannon_entropy/: __init__.py  cli.py  core.py  detector.py
scripts/: build_soft_contact.py  inject_agent_updates.py  install_macos_app.sh  package_pill.sh  project_tokens.py  shannon  test_neon_qemu.sh  train_256x256.py  update_homebrew_artifacts.sh
src/: bindings.cpp  energy_matrix.cpp  energy_matrix.h  fast_optics.cpp  fast_optics.h  shannon.cpp  shannon.h  shannon.hpp  shannon_cuda.cu  shannon_cuda.cuh  shannon_metal.h  shannon_metal.metal  shannon_metal.mm
src/contact/: atom_types.hpp  bindings_contact.cpp  soft_contact_matrix.cpp  soft_contact_matrix.hpp
src/shannon/: THERMODYNAMIC_FOUNDATIONS.txt  collapse_detector.cpp  collapse_detector.hpp  config.hpp  config.hpp.in  entropy.hpp  entropy_avx2.cpp  entropy_avx512.cpp  entropy_gpu.cu  entropy_metal.metal  entropy_neon.cpp  entropy_omp.cpp  entropy_scalar.cpp  entropy_simd.cpp  entropy_sse42.cpp  handrail.cpp  handrail.hpp  hardware_detect.cpp  hardware_detect.hpp  mutual_info.cpp  mutual_info.hpp  simd_exp.hpp  simd_log2.hpp  stream_ingest.cpp  stream_ingest.hpp  terminal_agent.cpp  terminal_agent.hpp  turbo_quant.cpp  turbo_quant.hpp  types.hpp  unified_dispatch.cpp  unified_dispatch.hpp
tests/: test_detector.py  test_energy_matrix.cpp  test_fast_optics.cpp  test_integration.py  test_shannon.cpp  test_train.py
tests/cpp/: test_neon_kernels.cpp  test_shannon.cpp  test_shannon_v2.cpp  test_simd_exp.cpp  test_soft_contact_matrix.cpp
tests/python/: conftest.py  test_cli.py  test_detector.py  test_pill_bridge.py  test_soft_contact_matrix.py
tools/train_contact_matrix/: accumulate_contacts.py  assign_types.py  fit_matrix.py  validate_casf.py
(+50 files in other folders)
