[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.13"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon-entropy"
version = "0.1.0"
description = "Shannon Entropy Collapse Detection — physics-grounded LLM safety primitive"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Louis-Philippe Morency", email = "lp@thebonhomme.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
keywords = ["entropy", "llm", "safety", "deception-detection", "ai-safety"]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
numba = ["numba>=0.59"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["numba>=0.59", "openai>=1.0", "anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
shannon-monitor = "shannon_entropy.cli:main"

[project.urls]
Homepage = "https://github.com/LeBonhommePharma/Shannon"
Repository = "https://github.com/LeBonhommePharma/Shannon"
Issues = "https://github.com/LeBonhommePharma/Shannon/issues"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
